--- a/content/posts/职场怪诞.md
+++ b/content/posts/职场怪诞.md
@@ -1,7 +1,7 @@
 ---
 title: "职场怪诞"
 date: 2024-02-24
-lastmod: 2024-05-31
+lastmod: 2024-06-29
 ---
 
 这个班就上得很有乐趣。以下都是我的幻觉，纯属创造。
@@ -47,6 +47,8 @@ lastmod: 2024-05-31
 部门 P 用了部门 Q 的预算做事，欠了一家头部供应商 R 一笔钱已经快两年了。最近被催款，对接人希望供应商 R 去和部门 P 的 负责人澄清下，因为部门 P 的 负责人不认同供应商 R 的欠债要还钱的财税规定。供应商 R 认真地邮寄了个催款函给大老板，被部门 P 成功截胡了，部门 P 的负责人觉得供应商 R 这样做太不专业了。
 
 部门 S 一个车上服务会将某些数据高频发送到自己搭建的公网 IP 裸奔服务，最近车有卖到某个国家了被安全部门发现了，定为最高等级的安全事故。部门 S 就也没法立刻关闭这个发送，因为不存在这个开关，而且关了以后其它国家的功能就不能用了。
+
+部门 S 写的软件有 bug，release 后才被发现，但是软件已经交出去了。各种拉会一顿讨论修复方案，结果一个开发说“好消息好消息，这个 bug 的那个功能开关在这个版本忘记打开了”，负负得正。
 
 部门 S 因此还喜欢给技术团队定技术方案，然后称之为需求。被技术团队挑战时义正言辞地问有什么难点。难点在于，如果你说他懂不懂技术，他就投诉 HR；如果你不得罪他，那这个需求上线后 1min 内，就能把关联系统压挂、把链路堵住、把下游的系统搞失联，一键三连。公司技术难点是如何在不骂人的前提下拯救公司的业务。
 
