--- a/content/posts/神奇建筑在哪里.md
+++ b/content/posts/神奇建筑在哪里.md
@@ -1,6 +1,7 @@
 ---
 title: "神奇建筑在哪里"
 date: 2024-04-10
+tags: [life]
 ---
 
 以前读书的时候，喜欢在美国到处看奇奇怪怪的建筑。
@@ -33,7 +34,8 @@ www.clui.org/ludb
 
 在土路的尽头过了个夜。还坐在车顶，在这个奇妙的荒凉的世界，的尽头看了场日出。
 
-## 
+##
+
 总之还有很多，可以 by state 搜。值得穷举 their weird histories。平淡无奇，又不会让你失望，还往往有惊喜。
 
 比如我在一个雷雨的前夕，在乌云压阵只露出一圈天光的大风里，去追 Cathedral Canyon。空旷的高速公路上被两辆白色 suv 紧紧尾随，结果在终点又遇上了他们。
