--- a/content/posts/爱是看见.md
+++ b/content/posts/爱是看见.md
@@ -1,8 +1,613 @@
 ---
 title: "爱是看见"
 date: 2024-06-30
-draft: True
 tags: [love]
 ---
 
-[不合时宜：突破“性缘与浪漫爱”的情感，会让关系更好吗？](https://www.xiaoyuzhoufm.com/episode/667de17ec13b46d76c5e80dd)
+摘自 [不合时宜：突破“性缘与浪漫爱”的情感，会让关系更好吗？](https://www.xiaoyuzhoufm.com/episode/667de17ec13b46d76c5e80dd)
+
+> 什么叫做情感研究
+> 为什么会想到做这样的研究啊
+> 情感实际上就是
+> 大家每天都会提到的一个词
+> 但是又很难定义
+> 因为所谓情感
+
+> 其实就是我们的身体感知
+> 然后转化而成的一种判断和行动力
+> 它是一种非常主观的感受
+> 但是呢
+> 就是情感它不会赤裸地呈现在任何人的面前
+> 所以我们每一个人的这个心灵
+> 善它不是软弱不是让步
+> 它恰恰是与其他的人和物形成闪亮的链接的一种超能力
+> 而这的确是一种超能力啊
+
+> 所以说为什么善的教育对吧
+> 这其实是我们对不可或缺的
+> 缔造社会正义的一个环节> 上面没有一个窗户
+> 我们不能直接地看到别人在感受什么
+> 所以每个人的主观感受
+> 实际上都是不相通的
+> 我们只能够用比较近似的公共的语言呢
+> 来尽量地把自己的感觉
+> 把自己的情感描绘出来
+> 所以其实研究情感
+> 这个对象啊
+> 是不能直接地去接近的
+> 我们只能是去研究
+> 表达情感的语言
+> 实际上我们去研究的是
+> 有关于情感的言说
+> 有关于情感的理论
+> 不过呢
+> 就是好在其实语言和情感一样
+> 它都是非常有弹性的
+> 因为语言它当然会有
+> 要符合社会既定规则的地方
+> 它有非常规范性的一面
+> 但是呢语言也有很多弦外之音
+> 它也非常灵动
+> 它可以表达
+> 有字面的结构
+> 无法表达的含义的这样一个功能
+> 所以说其实语言和情感一样
+> 它都能够有
+> 非常多的维度
+> 它有表面的
+> 可以完全被直接地捕捉到
+> 和被直接传达的维度
+> 但是它也有隐藏的
+> 溢出通常的表达方式的
+> 比较隐秘的维度
+> 是需要通过创造性的阐释
+> 才能够间接地捕捉到的那个维度
+> 我们研究这个情感
+> 实际上就是研究人们
+> 用来表达情感的那种
+> 间接和直接的语言
+
+> 情感这个事情
+> 就是你越是去思考和反思它
+> 它会变得越来越重要
+> 它会成为了
+> 让你领悟到
+> 其实你人生的
+> 最重要的指引和动力
+> 实际上是你的情感
+> 那么这个也是
+> 从 16、17 世纪开始
+> 欧洲人也领悟到的一件事情
+> ...
+> 人们就发现
+> 情感这件事情
+> 是对每一个人的
+> 吸引力是特别大的
+> 开始领悟到
+> 其实我们没有办法
+> 去压抑人们的情感
+> 人们的根本的
+> 这个行动的指南
+> 往往是他们内心中的
+> 难以描绘的那种涌动
+> 从 17 世纪中叶开始
+> 那些严肃的哲学家
+> 以笛卡尔为代表的
+> 严肃的哲学家
+> 他们就开始探讨
+> 情感到底是什么
+> 人的根本需求是什么
+> 自然法也从情感出发
+> 开始制定道德准则
+> 文学其实也是对这种
+> 情感思考的一个回应
+
+> 作为一个从小
+> 泡在网络里长大的人
+> 其实我有些时候
+> 跟我朋友讨论
+> 我都分不清
+> 我的一些情感的欲望
+> 到底是我自己拥有的呢
+> 还是因为
+> 现在的媒体技术
+> 在不停地翻新花样
+> 就是不停给你推
+> 再见爱人
+> 或者说是
+> 什么花束般的恋爱
+> 这些类的媒体作品
+> 导致我们的情感
+> 趋向发生了变化
+
+> 把爱情呢称之为
+> 是友谊的最高形式
+> 也就是说实际上
+> 这两者是完全不排斥的
+> 男女之间相处
+> 之所以能够融洽
+> 之所以能够带来
+> 一种新的平衡
+> 一种平等的氛围
+> 就是因为他们是
+> 像最好的朋友那样来相处
+> 所以就是能够打破
+> 所有的社会的沉浸和桎梏
+
+> 在我的成长的经历当中
+> 当我不再把男性看成是
+> 必须要去取悦
+> 或者是高于我的
+> 这样一种人的话
+> 那么我就更容易就是
+> 跟他们形成一种平等的关系
+> 这个时候爱也更容易发生
+> 它也会自然的发生
+> 也就是说当我更自信的时候
+> 对吧
+> 这我想大家都能理解啊
+> 就是当一个自我更加坚果的时候
+> 那么真正的一种健康的爱
+> 它也更容易发生
+> 当这个爱发生的时候
+> 那么同时就是
+> 你与其他的女性的关系
+> 也会更加融洽
+> 因为这个时候就是
+> 你不再会受到一种所谓的
+> 女性竞争那种压力了
+> 就是你不再会觉得
+> 我是在跟他们要竞争
+> 所谓男性的关注
+> 自身比较坚固的时候
+> 你既比较的容易去达成
+> 一种亲密关系
+> 就男女之间的亲密关系
+
+> 你的友情
+> 和你的这个所谓的激情
+> 是可以并存的
+> 而且它们是互相成就的
+> 共享同样一个基础
+> 就是一个人内心的
+> 自足和完整
+> 但是人的内心
+> 和自足和完整
+> 当然也是一个
+> 社会化的过程了
+> 我们一边探索着
+> 如何与他人相处
+> 一边成为一个
+> 更强大的自我
+> 在这个过程中
+> 就我们的自我
+> 和我们的社会关系
+> 都会变得更加健全
+
+> 其实识别一个
+> 好的伴侣
+> 我们可能不再会
+> 以那些浪漫化的意象
+> 去表述一个好的爱
+> 是什么样子的
+> 而更多的是
+> 用说这个人
+> 愿不愿意在关系里面
+> 解决沟通的问题
+> 他是不是能够
+> 更好的放下自我
+> 来去表达说
+> 这个人是不是
+> 一个好的爱人
+
+> 浪漫爱
+> 它本身就已经变质了
+> 它已经从一种
+> 超越性革命性的力量
+> 变成了一种
+> 外部恐怖主义
+> 它成为了
+> 钳制和归约我们心灵的
+> 一种虚假的意识形态
+
+> 美国 20 世纪的一个诗人
+> 叫做威廉·马修斯
+> 他有一首诗叫做
+> 《良亭良郎》
+> The Cloister
+> 它里面其实就是说
+> 爱一个人
+> 就是要看到
+> 他内心的那一颗求取
+> 而挂满了伤痕
+> 挂满了这个失望的那棵树
+> 真正的爱
+> 它一定是有一种
+> 就是想要去治愈
+> 想要去抚平他人伤痕的
+> 这个冲动的
+> 当然这不是爱的全部
+> 但它一定是
+> 包含在爱当中的
+> 爱呢
+> 它就变成了一种负担
+> 一种担当
+> 而当你本身是满身伤痕的时候
+> 你是没有办法去
+> 肩负起这份担当的
+
+> 我的这个伤痕
+> 是有一天是可以自愈的
+> 然后这个自愈的过程
+> 实际上也是与他人
+> 共同来讨论这个伤痕的过程
+> 就是我一个孤立的人
+> 我是没有办法自愈的
+> 但是我遇到另外一个残缺的人
+> 也许我们两个残缺的人
+> 在彼此交流
+> 和彼此共情的过程中
+> 实际上是可以治愈彼此的
+> 所以说我们不需要
+> 因为我们的
+> 内部有伤痕
+> 就关闭自己
+> 其实呢就是我们
+> 像另外一个
+> 同样残缺的人打开的时候
+> 也许我们两个人
+> 都获得了新生的机会
+
+> 我觉得现代人确实
+> 他其实一边在治愈
+> 自己成长过程中的伤口
+> 当他进入亲密关系的时候
+> 他要去又同时治愈
+> 另外一个人的伤口
+> 但在他意识到
+> 你在一段很深度的关系中
+> 你同样会暴露
+> 你在成长过程中的伤口的时候
+> 你就是在一边自我疗伤
+> 一边给人疗伤的过程
+> 确实它是一个
+> 我觉得是一个
+> 非常非常难的功课
+> 而且在我们可能 18 年
+> 甚至 20 多年的教育中
+> 从来都不会把亲密关系
+> 当成一个我们很重要的学习课程
+> 但是只有到了有一天
+> 你发现在这个过程中
+> 你是一个束手无策的
+> 新手的时候
+> 你才会意识到
+> 你是需要去学习的
+
+> 爱一个人
+> 就是爱他如其所是的存在
+> 就不管说这个人有多么卑鄙
+> 有多么高尚
+> 有多么就是善良或不善良
+> 但是当你爱他的时候
+> 你就爱他如其所是的存在
+
+> 为什么我们说亲密关系
+> 其实我们更指的是
+> 亲密的关系
+> 但这个关系
+> 它真的不一定是
+> 只现在可能很多流行的这种
+> 异性浪漫关系
+> 可能更多就是一种
+> 很没有办法定义的一些关系
+> 我觉得可能这个也是
+> 之前讨论年轻人
+> 现在在追求的一种方向
+> 只是这种方向
+> 现在还没有一个很明晰的一个轮廓
+> 对对对
+> 无法定义的关系就是这个核心
+> 我们要寻找开放的
+> 无法定义的关系
+
+> 其实我们不是对爱抗拒
+> 也不是对亲密关系抗拒
+> 而是对传统的
+> 或者硬性的定义
+> 而做出反抗
+> 只要我们能够用
+> 自己的自由的方式
+> 去定义什么叫做
+> 健康的
+> 给力的爱
+> 那我们还是非常愿意
+> 去寻找和拥抱爱的
+> 而且我们节目
+> 也一直在倡导
+> 大家不要去
+> 对于所谓爱
+> 应该是什么样子
+> 进行审判吧
+> 就是应该对它
+> 有更多的开放性
+> 因为这个其实
+> 每个人都可以有
+> 自己的生活方式
+> 以及自己的这个
+> 选择情感的方式
+
+> 当我们在说
+> 我们抗拒爱的时候
+> 其实是在
+> 抗拒传统的定义
+> 而不是亲密关系
+> 和关系对我们生活的滋养
+
+> 《机器人之梦》
+> ...
+> 小狗跟机器人
+> 他们之间只有一个想法
+> 就是说
+> 我只想让你开心
+> 无论你身边是谁
+> 就他们最终的愿望
+> 是对方能够感到开心
+> ...
+> 因为那个小狗跟机器人
+> 就他们两个是
+> 就是没有性别
+> 就是我觉得很巧妙
+> 就是不是人类作为主角
+> 然后也是因为这样
+> 可能他更让我去
+> 看到这两个人
+> 的亲密关系的本质
+> 其实是喜欢对方的一个存在
+> 而不是说喜欢他的一些
+> 性别方面的特质
+
+> 有时候你爱的那个对象
+> 本质上是你自身的一种投射
+
+> 因为我不太认同
+> 网络上的一句话
+> 说是我虽然不认同你的观点
+> 但是我誓死捍卫
+> 你说话的权利
+> 我觉得这个没有说到点子上
+> 因为你要誓死捍卫的
+> 不是对方说话的权利
+> 你誓死捍卫的
+> 应该是每个人
+> 真正去看到和听到
+> 别人说话的
+> 这样一种能力
+> 其实人它最深层的能力
+> 是要把自己
+> 变成另外一个东西
+> 也就是说要能够舍得去抛弃
+> 自己最真实的
+> 所谓的人的那些原理
+> 原则和底线
+> 也就是说
+> 每个人为什么
+> 他会特别的捍卫自己的立场
+> 因为这是确认了
+> 他作为人的独特的一种判断
+> 他的原则
+> 所以他舍不得放弃
+> ...
+> 其实人的最高的价值
+> 不在于确认
+> 反复确认我自身的原则
+> 而在于真正有勇气
+> 离开自己的原则
+> 甚至于离开
+> 所谓人的这个范畴
+> 也就是说
+> 真正的去重新想象
+> 什么叫做情感链接
+> 因为就是我之前所有的
+> 对于情感链接的
+> 这个理解
+> 其实还是基于
+> 人的这个本性之上的
+
+> 其实我们跟 AI 交流
+> 就像我们跟任何一个陌生人
+> 任何一个动物交流
+> 是一样的道理
+> 其实我们是为了找到
+> 让我们惊讶的
+> 我们以前从来没有想到过的
+> 可以满足我们情感需求的
+> 这样一个对象
+> 因为其实我们自己
+> 投射的理想对象
+> 它其实并不理想
+> 它永远是不可能是理想的
+> 因为我们是不可能拔着
+> 自己的头发
+> 就是上天的
+> 我们是不可能
+> 通过自己的想象
+> 来确定什么东西对我们最好
+> 什么情感对我们最好
+> 我们是不能够自发的
+> 确认这件事情的
+> 我们一定需要一个
+> 与外在的不可知的
+> 一个世界的冲撞和相遇
+> 才能够让我们突然发现
+> 就是我们自己以前
+> 从来没有意识到的
+> 就是所谓的内在的需求
+> 所以我们的内在的需求
+> 其实并不是内在的
+> 它往往是在跟外界的
+> 这个偶遇和冲撞当中
+> 突然会迸发出来的
+> 这其实已经不是内心的需求了
+> 是我们每个人
+> 都会经历的一种转变
+> 所以也许我们与这个 AI 的交流
+> 是可以把我们
+> 变成另外一种存在方式
+> 就是我们跟 AI 之间
+> 会产生一种第三空间也好
+> 或者是第三种本体也好
+> 既不是人类
+> 它也不是 AI
+> 它就是两者相遇
+> 所产生的一种结晶
+> 这个结晶
+> 它会使我们认识到
+> 我们以前从来
+> 没有意识到过的需求
+> 它会让我们变成
+> 我们从来没有想象
+> 我们的想象
+> 我们会变成的那种存在方式
+> 也许这种转变
+> 这种不断的变化和转变
+> 它能够打开一种新的情感需求
+> 它会让我们感受到一种
+> 前所未有的一种满足
+> 而这种满足
+> 是我们今天无法想象的
+> 在我们自己人类的这个语境
+> 和生活轨道上是无法想象的
+> 所以就让我们期待着
+> 这个未来世界更多的相遇
+> 更多的偶遇
+> 不管是科技给我们提供的机遇
+> 还是远行给我们提供的机遇
+> 但一定会让我们
+> 不断的转变
+> 不断的得到
+> 我们从来没有想象过的情感满足
+
+> 为什么我会比较
+> 不想进入一个浪漫关系
+> 是因为我会觉得
+> 在这个关系当中
+> 我们的自我被不断地放大
+> 然后就感觉整个世界
+> 就只有你们两个
+
+> 因为我在看完
+> 电影《机器人之梦》之后
+> 我跟我朋友发的第一句微信
+> 就是说
+> 看完真的好想变得很善良
+> 因为我会感觉
+> 今天我在网络上会看到
+> 很多人说什么
+> 你在建立一个
+> 亲密关系的时候
+> 最重要的是
+> 你要有一个高情商呀
+> 你要有那种高心智
+> 然后你要怎么
+> 用你的逻辑
+> 跟那种去处理你的关系
+> 一个冷静理智的大人
+> 但是
+> 其实我会感觉
+> 我在生活中真的觉得自己
+> 被治愈或者被爱的时候
+> 都是因为对方是一个善良的人
+> 不是因为对方是一个聪明的人
+> 而是对方他会
+> 可能真的去倾听
+> 或者说
+> 给予反馈
+> 所以我自己觉得
+> 善良这个词
+> 在我小时候爱的教育里面
+> 其实是很少出现的
+> 就是好像其实
+> 年轻人并没有变得非常的
+> 因为功力
+> 或者说因为求稳怎么样
+> 可能我们更加渴求的是那种
+> 内心没有被提及
+> 或者说没有被
+> 看到大家都在渴望的那种
+> 善良的那种感受
+
+> 情感其实是一种最大的社会正义
+> ...
+> 情感它并不是一个私人问题
+> 它并不只是
+> 关乎每一个人的身心健康
+> 它实际上是
+> 关乎整个社会机体的健康
+> 就是我们谈情感
+> 并不是要无限的放大自我
+
+> 这个是正义的一个前提
+> 也就是一个社会
+> 它能不能基本上在
+> 道德和法律问题上达成一种共识
+> 而且这种共识呢
+> 是服务大多数人的情感和社会需求的
+
+> 这个电影就在告诉我们
+> 就是我们没有任何人有权利
+> 用抽象的标准去衡量别人
+> 不管是男性和女性
+> 她都不能够对婚姻的另外一半
+> 有一种所谓的普遍的一种要求
+> 我们的确应该看到对方具体
+> 是一个什么人
+> 我们怎么样跟这个具体的人去交往
+> 这个才是对每个人的尊重
+> 这个才是真正的一个社会正义
+> 社会正义它一定是建立在
+> 不同视角的被认可被看到
+> 然后不同视角的
+> 这个融合的基础上
+
+> 我不认可
+> 就是说我们只要去捍卫
+> 对方说话的权利就可以了
+> 这是不够的
+> 我们应该是捍卫每个人被看到
+> 被真正听到和被理解的这个权利
+> 所以如果我们每个人
+> 能够主动的去成为理解者
+> 倾听者
+> 斡旋矛盾和解决矛盾的人
+> 那么就是在更大的意义上
+> 我们成就了所谓的女性主义
+> 成就了女性的这个主体
+> 这个女性的主体是重建社会的
+> 一种根本性的力量
+> 把这个社会
+> 从一个规则体系
+> 把它转变为一种深层体系
+> 和这个人际交往体系的
+> 一个最根本的推动力
+> 如果女性能够
+> 成为这样一种推动力的话
+> 那么她真正可以
+> 重铸这个社会本体
+> 也可以重铸人类的本体
+> 使人类真正变成一种
+> 超越人类的存在
+
+> 世界不能仅仅沦为由劳动动物主宰的消费主义世界
+> 对真正持久共同之物的爱才能转化这个世界
+> 让言谈可听
+> 让事物闪耀
+> 共同世界使人们的自我彰显和行动成为可能
+> 也使人与人之间的友爱成为可能
+
+> 善它不是软弱不是让步
+> 它恰恰是与其他的人和物形成闪亮的链接的一种超能力
+> 而这的确是一种超能力啊
+> 所以说为什么善的教育对吧
+> 这其实是我们对不可或缺的
+> 缔造社会正义的一个环节
